--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                 <div class="puls-dot puls-dot_three"></div>
                 <div class="puls-dot puls-dot_four"></div>
             </div>
-            <div class="sections__next"></div>
+            <!-- <div class="sections__next"></div> -->
         </section>
 
         <section class="sections__block sections__block_two">
             <h2 class="section__subtitle_mod">Основа терапии - патогенез СД2</h2>
-            <div class="sections__next"></div>
+            <!-- <div class="sections__next"></div> -->
         </section>
 
         <div class="sections__block_slide">
